# SkillX

./: .gitignore  README.md
.github/workflows/: ci.yml
SkillX/: Cargo.toml  job_info.env
SkillX/backend/: README.md  package-lock.json  package.json  supabase-schema.sql
SkillX/backend/src/: app.js  server.js
SkillX/backend/src/config/: env.js  supabase.js
SkillX/backend/src/routes/: jobRoutes.js  profileRoutes.js  submissionRoutes.js
SkillX/backend/src/utils/: hash.js  http.js
SkillX/contracts/escrow/: Cargo.toml
SkillX/contracts/escrow/src/: lib.rs
SkillX/contracts/job_manager/: Cargo.toml
SkillX/contracts/job_manager/src/: lib.rs
SkillX/contracts/job_manager/test_snapshots/: test_cancel_open_job_refunds_client.1.json  test_full_two_milestone_lifecycle.1.json  test_timeout_auto_approve.1.json
SkillX/contracts/job_manager/test_snapshots/tests/: test_accept_job.1.json  test_bad_percentages_rejected.1.json  test_client_cannot_be_freelancer.1.json  test_timeout_not_triggered_early.1.json  test_timeout_requires_submitted_status.1.json
SkillX/contracts/job_manager/tests/: integration.rs
SkillX/frontend/: .env.example  README.md  index.html  package-lock.json  package.json
SkillX/frontend/src/: App.jsx  main.jsx
SkillX/frontend/src/components/: FreelancerCard.jsx  Header.jsx  JobCard.jsx
SkillX/frontend/src/context/: WalletContext.jsx
SkillX/frontend/src/pages/: ClientDashboard.jsx  FreelancerDashboard.jsx  HomePage.jsx  ProfilePage.jsx  RolePage.jsx  StartPage.jsx
SkillX/frontend/src/services/: api.js  contracts.js
(+9 files in other folders)
